--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 	<head>
 		<title>Notes App</title>
-		<link rel="stylesheet" href="style.css">
+		<link
+				rel="stylesheet"
+				href="style.css"
+		>
 	</head>
 	<body>
 		<div class="container">
@@ -60,6 +63,9 @@
 			</div>
 		</div>
 
-		<script type="module" src="js/app.js"></script>
+		<script
+				type="module"
+				src="js/app.js"
+		></script>
 	</body>
 </html>
